--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://stoic-hermann-984c41.netlify.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Paul's test site built with Hugo"
 theme = "ananke"
